--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
 				<!-- Copyright -->
 					<ul class="copyright">
 						<li>&copy; Yash Plorer. All rights reserved.</li>
+						<li>Frame by <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				
 			</div>
