new transactions and 'Euro' cat

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 								    <option>Gifts</option>
 								    <option selected="">Clubs</option>
 								    <option>Transit</option>
+								    <option>Euro</option>
 								    <option>Other</option>
 								</select>
 								<button type="submit">Add</button>
