--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
 								<h2 class="alt" style="font-size: 4em">Overview</h2>
 								<table>
 									<tr>
-<<<<<<< HEAD
-										<td width="25%"><h2 style="font-weight: 400;">{{cat.getVal(time.tag)}}</h2></td>
-										<td width="25%"><h2 id="foodBudg" style="font-weight: 400;"></h2></td>
+										<td width="25%"><h2 id="tot"></h2></td>
+										<td width="25%"><h2 id="budget"></h2></td>
 									</tr>
 									<tr>
 										<style type="text/css">
